--- a/schedule/uva.html
+++ b/schedule/uva.html
@@ -1,5 +1,3 @@
-<html>
-
 <script src="louscurl.js"></script>
 <script src="schedule.js"></script>
 <script src="canvasschedule.js"></script>
@@ -16,11 +14,13 @@
 </div>
 
 <style>
-body { display: flex;
+body {
+	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	flex-direction: row-reverse }
+	flex-direction: row-reverse
+}
 
 .box { background-color: #eee; padding: 1em; margin: 1em }
 	
@@ -35,52 +35,56 @@ textarea { width: 100%; height: 12em; resize: none }
 </style>
 
 <script>
+const CLASS_INPUT = document.querySelector("#classesToAdd")
+const SCHEDULE_DISPLAY = new ScheduleCanvas("schedule", {background: "#fff"});
 
-s = new ScheduleCanvas("schedule", {background: "#fff"});
+SCHEDULE_DISPLAY.drawSchedule("");
 
-s.drawSchedule("");
+const url = new URL(window.location.href);
+const srcurl = url.searchParams.get("src");
 
-let url = new URL(window.location.href);
-let srcurl = url.searchParams.get("src");
-
-if (srcurl) // sets ui values from text
-     { fetch(srcurl).then((response) => response.text()).then(text => { document.querySelector("#classesToAdd").value = text
-                                                                        addClasses() }) }
-
-function addClasses() {
-	let cot = document.querySelector("#classesToAdd")
-	for (let c of cot.value.split("\n")) {
-		addClass(c, true)
-	}
-	cot.value = ''
+// sets ui values from text
+if (srcurl) {
+	fetch(srcurl)
+		.then(resp => resp.text())
+		.then(text => {
+			CLASS_INPUT.value = text
+			addClasses()
+		})
 }
 
-function addClass(c, checked) {
+function addClasses()
+{
+	for (let c of CLASS_INPUT.value.split('\n'))
+		if (c)
+			addClass(c, true)
+	
+	CLASS_INPUT.value = ''
+}
+
+function addClass(c, checked)
+{
 	promiseClass(c, cls => {
-		console.log(cls)
-		
 		const classSelect = document.createElement('tr')
 		
 		classSelect.innerHTML = `<td><input class="class" id="${c}" type="checkbox" onchange="gen();"${checked? ' checked':''}></input></td><td>${cls[0].title}</td>`
 		
-		document.querySelector("#geninfo table").appendChild(classSelect);
+		document.querySelector("#geninfo table").appendChild(classSelect)
 		
 		gen();
 	});
 }
 
-function gen(){
-	let classes = [];
-	for (elem of document.getElementById("geninfo").querySelectorAll(".class")) {
-		if (elem.checked) classes.push(elem.id)
-	}
-	console.log(classes);
+function gen()
+{
+	const classes = Array.from(document.querySelectorAll('.class'))
+		.filter(elem => elem.checked)
+		.map(elem => elem.id);
+	
 	promiseSchedule(classes, sched => {
-		s.drawScheduleCallback(sched)
+		SCHEDULE_DISPLAY.drawScheduleCallback(sched)
 		document.querySelector('#output').value = getTextSchedule(sched)
 	});
 }
 
 </script>
-
-</html>
